--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "axios": "^0.17.1",
+    "cookie-parser": "^1.4.3",
+    "js-cookie": "^2.2.0",
+    "next-redux-wrapper": "^2.0.0",
+    "react-redux": "^6.0.0",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
